--- a/ProtoAmazon/src/styles.css
+++ b/ProtoAmazon/src/styles.css
@@ -2,4 +2,5 @@
 body{
     background-color: #F9EFD9;
     margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
